# RIQAudio-1

./: .gitignore
RIQAudio/: CMakeLists.txt
RIQAudio/src/: riqaudio.c
